--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mueed Ahmad</title>
+    <title>Hobbies</title>
 </head>
 <body>
     <center>
@@ -16,10 +16,26 @@
         <hr> 
     </center>
     <center>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, molestiae?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, molestias!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, vero?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, reiciendis!</p>
+        <table>
+            <tr>
+                <td><h1>My Hobbies</h1></td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Anime</li>
+                        <li>Manga</li>
+                        <li>Cricket</li>
+                        <li>Manhwa</li>
+                        <li>Gardening</li>
+                        <li>Programming</li>
+                        <li>Gaming (Mobile)</li>
+                        <li>Problem Solving</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </center>
+    
 </body>
 </html>
