--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
 
 <body>
     <center>
-        <h1><a href="index.html">Curriculum Vitae</a></h1>
-        <button><a href="personal_information.html">Personal Information</a></button>
-        <button><a href="qualification.html">Qualifications</a></button>
-        <button><a href="skills.html">Skills</a></button>
-        <button><a href="hobbies.html">Hobbies</a></button>
-        <button><a href="projects.html">Projects</a></button>
+        <h1><a href="index.html"><font color="black">Curriculum Vitae</font></a></h1>
+        <button><a href="personal_information.html"><font color="black">Personal Information</font></a></button>
+        <button><a href="qualification.html"><font color="black">Qualifications</font></a></button>
+        <button><a href="skills.html"><font color="black">Skills</font></a></button>
+        <button><a href="hobbies.html"><font color="black">Hobbies</font></a></button>
+        <button><a href="projects.html"><font color="skyblue">Projects</font></a></button>
         <hr>
     </center>
     <center>
